# chatgpt_ros

./: CMakeLists.txt  README.md  package.xml
script/: chatgpt_service.py
srv/: __init__.py
